# wassel

./: .gitignore  CHANGELOG.md  Cargo.toml  biome.json  compose.yaml  justfile  wkg.toml
.github/workflows/: ci.yaml  release.yaml
assets/: index.html  index.js
crates/admin-dashboard/: Cargo.toml
crates/admin-dashboard/src/: lib.rs  router.rs  server.rs  service.rs  sse.rs  stats.rs
crates/admin-dashboard/web/: .gitattributes  .prettierrc  eslint.config.js  justfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/admin-dashboard/web/src/lib/: utils.ts
crates/admin-dashboard/web/src/lib/assets/: main.css  unstyle.css
crates/admin-dashboard/web/src/lib/components/: Badge.svelte  Button.svelte  Dropdown.svelte  Gauge.svelte  SearchInput.svelte  Sidebar.d.ts  Sidebar.svelte  Title.svelte  index.ts
crates/admin-dashboard/web/src/lib/services/: stats.ts
crates/admin-dashboard/web/src/lib/stores/: index.ts
crates/admin-dashboard/web/src/routes/: +layout.svelte  +page.svelte
crates/admin-dashboard/web/src/routes/dashboard/: +page.svelte  +page.ts
crates/admin-dashboard/web/src/routes/logs/: +page.svelte
crates/admin-dashboard/web/src/routes/maintenance/: +page.svelte  +page.ts
crates/admin-dashboard/web/src/routes/performance/: +page.svelte
crates/cli/: Cargo.toml
crates/cli/src/: common.rs  main.rs  plugin.rs  stack.rs
crates/http/: Cargo.toml
crates/http/src/: body.rs  lib.rs  response.rs
crates/interface-postgres/: Cargo.toml
crates/interface-postgres/src/: bindings.rs  connection.rs  host.rs  lib.rs
crates/interface-postgres/wit/: postgres.wit  world.wit
crates/plugin-component/: Cargo.toml
crates/plugin-component/src/: errors.rs  image.rs  instance.rs  state.rs
crates/plugin-stack/: Cargo.toml
crates/plugin-stack/src/: config.rs  errors.rs  lib.rs  service.rs  stack.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/subscriber/: Cargo.toml
crates/subscriber/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  postgres.rs
test-components/postgres/: Cargo.toml  justfile  plugin.toml
test-components/postgres/src/: lib.rs
wit/: http-client.wit  postgres.wit  redis.wit  wassel.wit
