[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
wassel-admin-dashboard = { path = "crates/admin-dashboard" }
wassel-cli = { path = "crates/cli" }
wassel-http = { path = "crates/http" }
wassel-plugin-component = { path = "crates/plugin-component" }
wassel-plugin-stack = { path = "crates/plugin-stack" }
wassel-server = { path = "crates/server" }
wassel-subscriber = { path = "crates/subscriber" }
wassel-world = { path = "crates/world"}

anyhow = "1.0.100"
bytes = "1.11.1"
chrono = "0.4.44"
circular-buffer = "1.2.0"
clap = "4.5.59"
config = "0.15.19"
dashmap = "6.1.0"
futures = "0.3.32"
futures-util = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
include_dir = "0.7.4"
lazy_static = "1.5.0"
matchit = "0.9.1"
pin-project = "1.1.11"
pretty_assertions = "1.4.1"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
subprocess = "1.0.0"
subst = "0.3.8"
sync_wrapper = "1.0.2"
sysinfo = "0.38.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-config = "41"
wasmtime-wasi-http = "41"
wit-bindgen = "0.53.1"
