[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.1.1"
authors = ["Albert Shefner <usn0emo@gmail.com>"]
edition = "2024"
license = "Apache-2.0 with LLVM exception"
license-file = "LICENSE"
repository = "https://github.com/wasselteam/wassel"

[workspace.dependencies]
wassel-admin-dashboard = { path = "crates/admin-dashboard" }
wassel-cli = { path = "crates/cli" }
wassel-http = { path = "crates/http" }
wassel-plugin-component = { path = "crates/plugin-component" }
wassel-plugin-stack = { path = "crates/plugin-stack" }
wassel-server = { path = "crates/server" }
wassel-subscriber = { path = "crates/subscriber" }
wassel-world = { path = "crates/world"}

anyhow = "1.0.102"
bytes = "1.11.1"
chrono = "0.4.44"
circular-buffer = "1.2.0"
clap = "4.6.1"
config = "0.15.22"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.32"
futures-util = "0.3.32"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
include_dir = "0.7.4"
lazy_static = "1.5.0"
matchit = "0.9.2"
pin-project = "1.1.12"
pretty_assertions = "1.4.1"
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
subprocess = "1.1.0"
subst = "0.3.8"
sync_wrapper = "1.0.2"
sysinfo = "0.39.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-postgres = "0.7.17"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wasmtime = "44"
wasmtime-wasi = "44"
wasmtime-wasi-config = "44"
wasmtime-wasi-http = "44"
wit-bindgen = "0.57.1"
