[package]
name = "wassel-cli"
version = "0.1.0"
edition = "2024"
default-run = "wassel-cli"

[dependencies]
wassel-admin-dashboard.workspace = true
wassel-plugin-component.workspace = true
wassel-plugin-stack.workspace = true
wassel-server.workspace = true
wassel-subscriber.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
subprocess.workspace = true
subst.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
