[package]
name = "wassel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "wassel-cli"
repository.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]

[dependencies]
wassel-admin-dashboard.workspace = true
wassel-plugin-component.workspace = true
wassel-plugin-stack.workspace = true
wassel-server.workspace = true
wassel-subscriber.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
subprocess.workspace = true
subst.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
