[package]
name = "wassel-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
pin-project.workspace = true
sync_wrapper.workspace = true
tokio.workspace = true
