[package]
name = "wassel-plugin-component"
version = "0.1.0"
edition = "2024"

[dependencies]
wassel-world.workspace = true

anyhow.workspace = true
bytes.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper.workspace = true
lazy_static.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
wasmtime-wasi-config.workspace = true
wasmtime-wasi-http.workspace = true
wasmtime-wasi.workspace = true
wasmtime.workspace = true
