[package]
name = "wassel-plugin-stack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wassel-http.workspace = true
wassel-plugin-component.workspace = true
wassel-world.workspace = true

anyhow.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
matchit.workspace = true
serde = { workspace = true, features = ["derive"] }
subst.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
wasmtime.workspace = true
