[package]
name = "wassel-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wassel-plugin-stack.workspace = true

serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
config.workspace = true
hyper-util.workspace = true
hyper.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
